feature: update reservations, add ordering implementation